--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header class="header-top">
         <div class="header__banner banner">
           <div class="d-flex flex-column flex-lg-row justify-content-between">
-            <div class="banner--contact col row">
+            <div class="banner--contact col row m-0">
               <address class="banner__adress col-sm-6 col-xl-4 col-12">
                 <span class="marker icon-svg">
                   <img src="./images/svg/marker.svg" alt="" />
@@ -40,15 +40,17 @@
                 <a href="tel:+380674851000">+38 (067) 485 1000</a>
               </div>
             </div>
-            <div class="banner--social  col d-flex justify-lg-content-end justify-content-center">
-              <div class="language">
+           <div class="col ">
+<div class="banner--social">
+                  <div class="  row justify-lg-content-end justify-content-center m-0">
+              <div class="language col-1">
                 <select name="" id="">
                   <option value="">UA</option>
                   <option value="">RU</option>
                 </select>
               </div>
 
-              <div class="social-media">
+              <div class="social-media col-4">
                 <a href="#0">
                   <img src="./images/svg/facebook.svg" alt="" />
                 </a>
@@ -64,6 +66,8 @@
                 </a>
               </div>
             </div>
+</div>
+           </div>
           </div>
         </div>
 
